--- a/reactportfolio/public/index.html
+++ b/reactportfolio/public/index.html
@@ -19,8 +19,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="container-fluid">
-      <div id="root"></div>
-    </div>
+
+    <div class="container" id="root"></div>
   </body>
 </html>
